overlays/prod/ingress/namespace.yaml
# overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
