overlays/prod/ingress/ingress.yaml
# overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: prod          # ← groups rules in one ALB
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:794267022248:certificate/d331806d-a0a1-42fc-ac94-05b5d8fbff26
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb
  rules:
    - host: prod.web.lovelu.com                              # ← prod hostname
      http:
        paths:
          - path: /api                                 # ← specific first ✅
            pathType: Prefix
            backend:
              service:
                name: todo-backend-service
                port:
                  number: 80
          - path: /                                    # ← catch-all last ✅
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-service
                port:
                  number: 80
